@@ -1,3 +1,8 @@
+2017-02-07 Riccardo Mottola <rm@gnu.org>
+
+	* GRText.m
+	Optimize editor drawing if unselected.
+
 2017-01-08 Riccardo Mottola <rm@gnu.org>
 
 	* GRText.m
